2023-01-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcd.c (WritePCDTile): Handle writing image with a
	dimension of 1.

2023-01-02 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* jp2/* Update lib jasper to 2.0.33. Code cleanly compilles, but
	there is still some problem. Will be solved later.
	- jp2/src/lib/jasper/include/jasper/stdbool2.h No longer needed.

2023-01-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (GetMagickGeometry): Assure that width and
	height are not scaled down to zero since it is an invalid value.

	* coders/sun.c (ReadSUNImage): Enlarge RLE output buffer in order
	to avoid buffer overflow.  Addresses oss-fuzz 54716
	"graphicsmagick:coder_RAS_fuzzer: Heap-buffer-overflow in
	ReadSUNImage", which is due to a new problem added since the
	1.3.39 release.

2023-01-01 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* jp2/* Update lib jasper to 2.0.0.

2022-12-30  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/pcx.c (WritePCXImage): Meke default RLE compression.
        Uncompressed PCX is more rare.

2022-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated the news.

	* coders/pcx.c (WritePCXImage): Support writing uncompressed PCX
	by default.  Use -compress RLE to enable RLE compression.

	* coders/sun.c (ReadSUNImage): Sense of monochrome images was
	inverted.  Fix scanline size calculation.
	(WriteSUNImage): Sense of monochrome images was inverted.

2022-12-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcx.c (WritePCXImage): Fix heap overflow when writing
	more than 1023 scenes, and also eliminate use of uninitialized
	memory.

	* coders/pnm.c (ReadPNMImage): Compute the number of threads to
	use.

	* NEWS.txt: Update the news.

	* magick/command.c: Add use of GetFirstImageInList() where needed
	to assure that the list pointer is to the first image.

	* magick/constitute.c (ReadImage): Only perform subimage
	processing when required.
