@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230101"
-#define public MagickPackageReleaseDate "snapshot-20230101"
+#define public MagickPackageVersionAddendum ".020230102"
+#define public MagickPackageReleaseDate "snapshot-20230102"
