@@ -1,3 +1,7 @@
+2023-01-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/pict.c: Add more tracing.
+
 2023-01-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/pcd.c (WritePCDTile): Handle writing image with a
